[cleanup] - page margins - readme on how I went all out and still didn't manage to have separated URL for different languages

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
         title="visit The Hacking Project"
         >The Hacking Project</a
       >
+      Flag icons are from
+      <a
+        href="https://www.iconfinder.com/iconsets/flags-37"
+        title="visit Iconfinder.com"
+        >Iconfinder.com</a
+      >
       <hr />
     </footer>
   </body>
